# VertexSurge

./: .gitignore  CMakeLists.txt  README.md
scripts/: gen_vlgpm_graph.py  graph_info.json
src/include/: profiler.hh
src/include/common/: common.hh  fwd.hh  ptest_common.hh  value.hh
src/include/execution/: flat_table.hh  matrix_table.hh  table.hh  tuple.hh
src/include/meta/: graph_loader.hh  schema.hh  type.hh
src/include/operator/: aggregation.hh  big_operators.hh  big_operators2.hh  big_operators3.hh  expand.hh  expand_impl.hh  free_operator.hh  intersect.hh  operators_impls2.hh  physical_operator.hh
src/include/plan/: physical_plan.hh  usual_pattern.hh
src/include/storage/: CSR.hh  bitmap.hh  concurrent_disk_array.hh  disk_array.hh  graph_concepts.hh  graph_fetcher.hh  graph_store.hh  runtime_concepts.hh
src/include/testify/: fin_parameters.hh
src/include/utils/: csv.hh  mem.hh  multi_column_sort.hh  peano.hh  timer.hh  topk.hh  utils.hh
src/include/vql/: logical_query.hh  query_builder.hh
src/objects/: CMakeLists.txt  importer.cpp
src/objects/execution/: bit_matrix_table.cpp  concurrent_flat_table.cpp  flat_table.cpp  table.cpp  tuple.cpp
src/objects/meta/: graph_loader.cpp  ldbc_finbench_loader.cpp  schema.cpp
src/objects/operator/: big_operators2.cpp  expand.cpp  fetch_vertex_property.cpp  group_by_aggregation.cpp  intersect.cpp  join.cpp  matrix_column_count.cpp  matrix_row_or_sum.cpp  matrix_table_filter.cpp  merge.cpp  mintersect.cpp  physical_operator.cpp  reorder_flat.cpp  scan.cpp  semi_join.cpp  split_by.cpp  vexpand.cpp
src/objects/plan/: physical_plan.cpp
src/objects/storage/: CSR.cpp  bitmap.cpp  graph_fetcher.cpp  graph_store.cpp
src/objects/testify/: CMakeLists.txt  e1-self-ring.cpp  e2-3hop-reverse-count.cpp  e3-3hop-self-count.cpp  e4-community-triangle.cpp  e5-follower-count.cpp  e6-self-transfer.cpp  e7-risk-related-account.cpp  pure_expand.cpp  pure_expand_csr.cpp
src/objects/testify/ldbc-finbench/: tcr1.cpp  tcr2-single-point.cpp  tcr2.cpp  tcr3.cpp  tcr6.cpp  tcr8.cpp
src/objects/testify/plans/: p1-exp2-1.cpp  p1-exp2-2.cpp  p2-exp3-1.cpp  p2-exp3-2.cpp  p2-exp3-3.cpp  p2-exp3-4.cpp  p3-tri3-1.cpp  p3-tri3-2.cpp  p3-tri3-3.cpp  p3-tri3-4.cpp  p3-tri3-5.cpp  p4-exp4-1.cpp  p4-exp4-2.cpp  p4-exp4-3.cpp  p4-exp4-4.cpp  p4-exp4-5.cpp  p5-square4-1.cpp  p5-square4-2.cpp  p5-square4-3.cpp  p5-square4-4.cpp  p5-square4-5.cpp  p6-triexp4-1.cpp  p6-triexp4-2.cpp  p6-triexp4-3.cpp  p6-triexp4-4.cpp  p6-triexp4-5.cpp  p7-dtri4-1.cpp  p7-dtri4-2.cpp  p7-dtri4-3.cpp  p7-dtri4-4.cpp  p7-dtri4-5.cpp  p8-clique4-1.cpp  p8-clique4-2.cpp  p8-clique4-3.cpp  p8-clique4-4.cpp  p8-clique4-5.cpp
src/objects/vql/: CMakeLists.txt  logical_query.cpp  query_builder.cpp  vql-interface.cpp
src/objects/vql/grammar/: vql.g4  vql.interp  vql.tokens  vqlBaseListener.cpp  vqlBaseListener.h  vqlLexer.cpp  vqlLexer.h  vqlLexer.interp  vqlListener.cpp  vqlListener.h  vqlParser.cpp  vqlParser.h
src/test/: CMakeLists.txt  gtest.cpp
